components/manifests/overlays/mpp-openshift/ambient-api-server-service-ca-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambient-api-server
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ambient-api-server-tls
